Sculpt: Dyntopo detail size edit operator visual glitch #82400

Closed
opened 2020-11-04 11:45:49 +01:00 by fwfeet · 11 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce RTX 2080 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71

Blender Version
Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-11-03 23:04, hash: 564f3be20a

Short description of error
image.png

Exact steps for others to reproduce the error

  • enter sculptmode
  • enable Dyntopo
  • set Detailing to Constant Detail
  • press shift + d
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce RTX 2080 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71 **Blender Version** Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-11-03 23:04, hash: `564f3be20a` **Short description of error** ![image.png](https://archive.blender.org/developer/F9193653/image.png) **Exact steps for others to reproduce the error** - enter sculptmode - enable Dyntopo - set `Detailing` to `Constant Detail` - press shift + d
Author

Added subscriber: @costa

Added subscriber: @costa

Added subscriber: @rjg

Added subscriber: @rjg

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

Could you please add some more details to your error description and steps to reproduce?

  • What specific steps have you taken starting from the default startup file that results in this issue?
  • What is the most recent previous version of Blender that didn't not exhibit this issue?
Could you please add some more details to your error description and steps to reproduce? - What specific steps have you taken starting from the default startup file that results in this issue? - What is the most recent previous version of Blender that didn't not exhibit this issue?

It seems like adjusting the dyntopo size is generally not working, I'm not getting any visual indication like in 2.83 in current master.

Edit: There was a change made to this feature in 99a7c917ea, I will check if this problem is related.

It seems like adjusting the dyntopo size is generally not working, I'm not getting any visual indication like in 2.83 in current master. Edit: There was a change made to this feature in 99a7c917ea, I will check if this problem is related.
Member

Added subscribers: @PabloDobarro, @lichtwerk

Added subscribers: @PabloDobarro, @lichtwerk
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Member

I am not getting those artifacts in a release build, but in a Debug build, I am getting

BLI_assert failed: source/blender/gpu/intern/gpu_immediate.cc:62, immBindShader(), at 'imm->shader == __null'

which I can imagine is related.

Will confirm for the Assert alone.

CC @PabloDobarro

I am not getting those artifacts in a release build, but in a Debug build, I am getting ``` BLI_assert failed: source/blender/gpu/intern/gpu_immediate.cc:62, immBindShader(), at 'imm->shader == __null' ``` which I can imagine is related. Will confirm for the Assert alone. CC @PabloDobarro

I'm getting an assert in debug build as well, when Detailing is set to Constant Details.

_BLI_assert_abort() Line 51	C
immBindShader(GPUShader * shader) Line 62	C++
immBindBuiltinProgram(eGPUBuiltinShader shader_id) Line 81	C++
button2d_geom_draw_backdrop(const wmGizmo * gz, const float * color, const float fill_alpha, const bool select) Line 104	C
button2d_draw_intern(const bContext * C, wmGizmo * gz, const bool select, const bool highlight) Line 205	C
gizmo_button2d_draw(const bContext * C, wmGizmo * gz) Line 288	C
gizmos_draw_list(const wmGizmoMap * gzmap, const bContext * C, ListBase * draw_gizmos) Line 487	C
WM_gizmomap_draw(wmGizmoMap * gzmap, const bContext * C, const eWM_GizmoFlagMapDrawStep drawstep) Line 511	C
DRW_draw_gizmo_2d() Line 281	C
DRW_draw_callbacks_post_scene() Line 1445	C
DRW_draw_render_loop_ex(Depsgraph * depsgraph, RenderEngineType * engine_type, ARegion * region, View3D * v3d, GPUViewport * viewport, const bContext * evil_C) Line 1624	C
DRW_draw_view(const bContext * C) Line 1492	C
view3d_draw_view(const bContext * C, ARegion * region) Line 1596	C
view3d_main_region_draw(const bContext * C, ARegion * region) Line 1619	C
ED_region_do_draw(bContext * C, ARegion * region) Line 551	C
wm_draw_window_offscreen(bContext * C, wmWindow * win, bool stereo) Line 732	C
wm_draw_window(bContext * C, wmWindow * win) Line 875	C
wm_draw_update(bContext * C) Line 1074	C
WM_main(bContext * C) Line 485	C
main(int argc, const unsigned char * * UNUSED_argv_c) Line 526	C
I'm getting an assert in debug build as well, when *Detailing* is set to *Constant Details*. ```lines _BLI_assert_abort() Line 51 C immBindShader(GPUShader * shader) Line 62 C++ immBindBuiltinProgram(eGPUBuiltinShader shader_id) Line 81 C++ button2d_geom_draw_backdrop(const wmGizmo * gz, const float * color, const float fill_alpha, const bool select) Line 104 C button2d_draw_intern(const bContext * C, wmGizmo * gz, const bool select, const bool highlight) Line 205 C gizmo_button2d_draw(const bContext * C, wmGizmo * gz) Line 288 C gizmos_draw_list(const wmGizmoMap * gzmap, const bContext * C, ListBase * draw_gizmos) Line 487 C WM_gizmomap_draw(wmGizmoMap * gzmap, const bContext * C, const eWM_GizmoFlagMapDrawStep drawstep) Line 511 C DRW_draw_gizmo_2d() Line 281 C DRW_draw_callbacks_post_scene() Line 1445 C DRW_draw_render_loop_ex(Depsgraph * depsgraph, RenderEngineType * engine_type, ARegion * region, View3D * v3d, GPUViewport * viewport, const bContext * evil_C) Line 1624 C DRW_draw_view(const bContext * C) Line 1492 C view3d_draw_view(const bContext * C, ARegion * region) Line 1596 C view3d_main_region_draw(const bContext * C, ARegion * region) Line 1619 C ED_region_do_draw(bContext * C, ARegion * region) Line 551 C wm_draw_window_offscreen(bContext * C, wmWindow * win, bool stereo) Line 732 C wm_draw_window(bContext * C, wmWindow * win) Line 875 C wm_draw_update(bContext * C) Line 1074 C WM_main(bContext * C) Line 485 C main(int argc, const unsigned char * * UNUSED_argv_c) Line 526 C ```

This issue was referenced by 057f9caac6

This issue was referenced by 057f9caac6079a568770bdc0e7b798d89922ab73
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Pablo Dobarro self-assigned this 2020-11-05 23:28:59 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#82400
No description provided.