Fix T82400: Dyntopo detail size edit operator visual glitch

Just a missing immUnbindProgram

Reviewed By: sergey

Maniphest Tasks: T82400

Differential Revision: https://developer.blender.org/D9459